// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-once > as root node 1`] = `
"import { setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _setDynamicProp(n0, "id", _ctx.foo)
  return n0
}"
`;

exports[`compiler: v-once > basic 1`] = `
"import { createTextNode as _createTextNode, setClass as _setClass, prepend as _prepend, template as _template } from 'vue/vapor';
const t0 = _template("<div><span></span></div>")

export function render(_ctx) {
  const n2 = t0()
  const n1 = n2.firstChild
  const n0 = _createTextNode([_ctx.msg, " "])
  _setClass(n1, _ctx.clz)
  _prepend(n2, n0)
  return n2
}"
`;

exports[`compiler: v-once > inside v-once 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: v-once > on component 1`] = `
"import { resolveComponent as _resolveComponent, createComponent as _createComponent, insert as _insert, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const _component_Comp = _resolveComponent("Comp")
  const n1 = t0()
  const n0 = _createComponent(_component_Comp, [
    { id: () => (_ctx.foo) }
  ], null, null, true)
  _insert(n0, n1)
  return n1
}"
`;

exports[`compiler: v-once > on nested plain element 1`] = `
"import { setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n1 = t0()
  const n0 = n1.firstChild
  _setDynamicProp(n0, "id", _ctx.foo)
  return n1
}"
`;

exports[`compiler: v-once > with v-for 1`] = `
"import { createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.list), (_ctx0) => {
    const n2 = t0()
    return n2
  }, null, null, null, null, true)
  return n0
}"
`;

exports[`compiler: v-once > with v-if 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.expr), () => {
    const n2 = t0()
    return n2
  }, null, true)
  return n0
}"
`;

exports[`compiler: v-once > with v-if/else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
const t1 = _template("<p></p>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.expr), () => {
    const n2 = t0()
    return n2
  }, () => {
    const n4 = t1()
    return n4
  }, true)
  return n0
}"
`;
